--- a/index.html
+++ b/index.html
@@ -1,39 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <!-- metadata -->
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-<head>
-    <!-- metadata -->
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <!-- title and favicon -->
+        <title>Web App</title>
+        <link rel="icon" type="image/x-icon" href="assets/alchemy-favicon.png" />
 
-    <!-- title and favicon -->
-    <title>Web App</title>
-    <link rel="icon" type="image/x-icon" href="assets/alchemy-favicon.png" />
+        <!-- js -->
+        <script type="module" src="app.js"></script>
 
-    <!-- js -->
-    <script type="module" src="app.js"></script>
+        <!-- fonts -->
+        <!-- see https://fonts.google.com/ -->
 
-    <!-- fonts -->
-    <!-- see https://fonts.google.com/ -->
+        <!-- css -->
+        <link rel="stylesheet" href="styles/reset.css" />
+        <link rel="stylesheet" href="styles/global.css" />
+        <!-- add link for page specific css -->
+    </head>
 
-    <!-- css -->
-    <link rel="stylesheet" href="styles/reset.css" />
-    <link rel="stylesheet" href="styles/global.css" />
-    <!-- add link for page specific css -->
+    <body>
+        <header>
+            <h1 style="text-align: center">About Draco</h1>
+        </header>
 
-</head>
+        <section>
+            <img class="draco" src="draco .jpg" alt="draco" width="350" height="350" />
 
-<body>
-    <header>
-        <img class="logo" src="assets/html_css_js.png" alt="logo">
-        <h1>Web App</h1>
-    </header>
+            <aside>
+                <p>
+                    Draco is a two year old pit and lab mixed breed. He's all white with great big
+                    black spots. he's a very friendly dog and loves to play. I have known draco all
+                    his life, But he has only been in my care for over a year now. I rescued draco
+                    on my 23rd birthday because, His original owners couldn't care for him anymore.
+                    We have been best of friend's since. <br />
+                    <br />
+                </p>
+            </aside>
+        </section>
+        <section>
+            <h2 style="text-align: center">Draco's Favorite Hobbies</h2>
 
-    <main>
+            <ul style="text-align: center">
+                <li>-Play Tug-a-war</li>
+                <li>-He loves to cuddle (very clingy)</li>
+                <li>-He loves to forage on the coast</li>
+                <li>-The one thing he loves most is meeting new people</li>
+            </ul>
+        </section>
 
-    </main>
-
-</body>
-
+        <main></main>
+    </body>
 </html>
