changed path for image

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </header>
 
         <section>
-            <img class="draco" src="draco .jpg" alt="draco" width="350" height="350" />
+            <img class="draco" src="./assets/draco .jpg" alt="draco" width="350" height="350" />
 
             <aside>
                 <p>
